change urls to final

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <div class="title">example usage</div>
       <div class="example-codebox">
         <span class="comment">// request</span><br />
-        <span class="url">https://[base-url].com/145882384</span><br />
-        <span class="url">https://[base-url].com/August%2016,%201974</span><br /><br />
+        <span class="url">https://timestamp-marshallaf.herokuapp.com/145882384</span><br />
+        <span class="url">https://timestamp-marshallaf.herokuapp.com/August%2016,%201974</span><br /><br />
         <span class="comment">// response</span><br />
         {
           <div class="code-indent">
@@ -28,7 +28,7 @@
       </div>
     </div>
     <div class="attribution">
-    Created by Andrew Marshall with <a href="http://expressjs.com/">Express.js</a>. <a href="https://www.github.com/marshallaf">See it on Github!</a></div>
+    Created by Andrew Marshall with <a href="http://expressjs.com/">Express.js</a>. <a href="https://www.github.com/marshallaf/timestamp">See it on Github!</a></div>
   </div>
 </body>
 </html>
