change example requests to links

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
       <div class="title">example usage</div>
       <div class="example-codebox">
         <span class="comment">// request</span><br />
-        <span class="url">https://timestamp-marshallaf.herokuapp.com/145882384</span><br />
-        <span class="url">https://timestamp-marshallaf.herokuapp.com/August%2016,%201974</span><br /><br />
+        <span class="url"><a href="./145843200">https://timestamp-marshallaf.herokuapp.com/145843200</a></span><br />
+        <span class="url"><a href="./August%2016,%201974">https://timestamp-marshallaf.herokuapp.com/August%2016,%201974</a></span><br /><br />
         <span class="comment">// response</span><br />
         {
           <div class="code-indent">
-            <span class="bold">unix:</span> <span class="number">145882384</span><span class="bold">,</span><br />
+            <span class="bold">unix:</span> <span class="number">145843200</span><span class="bold">,</span><br />
             <span class="bold">natural:</span> <span class="string">"August 16, 1974"</span>
           </div>
         }
